# zakonycr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrape.yml
scraper/: __init__.py  cli.py  client.py  scraper.py  storage.py
tests/: __init__.py  test_cli.py  test_client.py  test_scraper.py  test_storage.py
